--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -11,3 +11,13 @@
     name: fstrim.timer
     enabled: yes
     state: started
+
+- name: enable ufw
+  ufw:
+    state: enabled
+
+- name: restart ufw
+  service:
+    name: ufw
+    enabled: true
+    state: restarted
