--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,4 +5,4 @@
 
 nodepilot_data_mount_point: md4
 nodepilot_data_mount_fs: ext4
-nodepilot_data_mount_opts: 'defaults,noatime'
+nodepilot_data_mount_opts: defaults,noatime
