--- a/tasks/nodepilot.yml
+++ b/tasks/nodepilot.yml
@@ -14,16 +14,6 @@
   notify:
     - restart nodepilot service
 
-- name: create backup copy of nodepilot's config
-  copy:
-    src: '/home/{{ nodepilot_user_name }}/.node-pilot/config'
-    dest: '/home/{{ nodepilot_user_name }}/.node-pilot/.backup.config.{{ ansible_date_time.iso8601_basic_short }}'
-    mode: preserve
-    remote_src: yes
-  when:
-    - "'nodepilot.service' in services"
-    - "ansible_facts.services['nodepilot.service']['state'] == 'running'"
-
 - name: get nodepilot binary
   get_url:
     url: 'https://builds.decentralizedauthority.com/node-pilot/v{{ nodepilot_release }}/np'
@@ -32,6 +22,8 @@
     owner: root
     group: root
     mode: '0755'
+  notify:
+    - backup nodepilot config
 
 - name: create nodepilot service file
   template:
