Fix another issue and drop the nexted Jinja pattern

--- a/tasks/nodepilot.yml
+++ b/tasks/nodepilot.yml
@@ -38,7 +38,7 @@
 
 - name: set nodepilot data directory and mount information
   set_fact:
-    nodepilot_data_path: '{{ nodepilot_data_path | default("/home/{{ nodepilot_user_name }}/.node-pilot") }}'
+    nodepilot_data_path: '{{ nodepilot_data_path | default("/home/" + nodepilot_user_name + "/.node-pilot") }}'
     nodepilot_data_mount_fs: '{{ nodepilot_data_mount_fs | default("ext4") }}'
     nodepilot_data_mount_opts: '{{ nodepilot_data_mount_opts | default("defaults,noatime") }}'
 
