--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -8,8 +8,11 @@
     keyring: /usr/share/keyrings/docker-archive-keyring.gpg
 
 - name: create docker sources.list entry
+  vars:
+    docker_apt_keyring: '/usr/share/keyrings/docker-archive-keyring.gpg'
+    docker_apt_url: 'https://download.docker.com/linux/{{ ansible_distribution | lower }}'
   apt_repository:
-    repo: 'deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable'
+    repo: 'deb [arch=amd64 signed-by={{ docker_apt_keyring }}] {{ docker_apt_url }} {{ ansible_distribution_release }} stable'
     state: present
     filename: docker
 
