Update syntax to version 0.16.1
Without the --all the service will only stop the web interface.

--- a/templates/etc/systemd/system/nodepilot.service
+++ b/templates/etc/systemd/system/nodepilot.service
@@ -9,7 +9,7 @@ After=network-online.target docker.service
 User={{ nodepilot_user_name }}
 Type=forking
 ExecStart=/usr/local/bin/{{ nodepilot_binary }} start -d
-ExecStop=/usr/local/bin/{{ nodepilot_binary }} stop
+ExecStop=/usr/local/bin/{{ nodepilot_binary }} stop --all
 Restart=on-failure
 RestartSec=60
 TimeoutSec=60
